--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I am Anya Demidova. <br>
+                    My name is Anya. <br>
                     I am a developer<br>
                     based in New York.
                 </h1>
